--- a/style.css
+++ b/style.css
@@ -4,3 +4,17 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
 }
+body {
+    background-color: var(--cor-de-fundo);
+}
+<body>
+    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+</body>
+body {
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+}
+* {
+    margin: 0;
+    padding: 0;
+}
