--- a/style.css
+++ b/style.css
@@ -18,3 +18,7 @@ body {
     margin: 0;
     padding: 0;
 }
+body>
+    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+</body>
