--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --branco-principal: #8edac3;
-    --cinza-secundario: #00ff37;
-    --botao-azul: #167BF7;
+    --branco-principal: #577ada;
+    --cinza-secundario: #3a7fff;
+    --botao-azul: #ff0000;
     --cor-de-fundo: #00030C;
 }
 body {
