--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 }
 .principal {
     background-image: url("img/Background.png");
+    background-repeat: no-repeat;
 }
 .container {
     height: 100vh;
