--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 .principal {
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
+    background-size: contain;
 }
 .container {
     height: 100vh;
