--- a/style.css
+++ b/style.css
@@ -27,5 +27,5 @@ body {
     height: 100vh;
 }
 .container__botao {
-    background-color: var(--botao-azul);
+    background-color: var(--botao-vermelho);
 }
