--- a/style.css
+++ b/style.css
@@ -27,5 +27,6 @@ body {
     height: 100vh;
 }
 .container__botao {
-    background-color: var(--botao-vermelho);
+    background-color: var(--botao-azul);
+    border-radius: 16px;
 }
