--- a/style.css
+++ b/style.css
@@ -30,4 +30,5 @@ body {
     background-color: var(--botao-azul);
     border-radius: 16px;
     padding: 1em;
+    color: var(--branco-principal);
 }
