--- a/style.css
+++ b/style.css
@@ -33,3 +33,6 @@ body {
     color: var(--branco-principal);
     display: block;
 }
+<section class="principal">
+ <img src="joice.jpeg ">
+ </section>
