--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
     background-size: contain;
 }
 .container {
-    height: 120vh;
+    height: 100vh;
+    display: grid;
 }
 .container__botao {
     background-color: var(--botao-azul);
@@ -33,8 +34,3 @@ body {
     color: var(--branco-principal);
     display: block;
 }
-<section class="container principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
-        <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-</section>
