--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ body {
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    height: 100px;
+    width: 100%;
+    color: rgb(255, 0, 0);
+    font-family: Arial, sans-serif;
+    margin: 0%;
+    padding:0%;
 }
 .container {
     height: 100vh;
